# OrbitalDetermination

./: .gitignore  CMakeLists.txt  README.md
data/: iau1980.txt
doc/HW0/: submission.tex
doc/HW1/: submission.tex
doc/HW2/: submission.tex
doc/HW3/: submission.tex
doc/HW4/: submission.tex
doc/HW5/: submission.tex
doc/project/: submission.tex  submission_final.tex
doc/project/figs/: CI_final.fig  RC_final.fig  RI_final.fig  bias.fig  postfit_final.fig  pred_meas_err.fig  prefit_final.fig  update_res.fig
src/HW0/: main.cc
src/HW1/: Util.cc  Util.h  VehicleState.cc  VehicleState.h  main.cc  plotting.m
src/HW2/: SymbolicPartials.m  Util.cc  Util.h  VehicleState.cc  VehicleState.h  gravJ2_x.m  gravJ2_y.m  gravJ2_z.m  main.cc  plotting.m
src/HW3/: Estimators.cc  Estimators.h  Util.cc  Util.h  VehicleState.cc  VehicleState.h  main.cc
src/HW4/: Estimators.h  Util.cc  Util.h  iau1980.txt  main.cc
src/HW5/: .~lock.PropagationDiff_VsGMAT.xlsx#  A_drag.m  A_t0.mat  Estimators.cc  Estimators.h  H_Tilde_t0.mat  LEO_DATA_Apparent.mat  MeasurementSymbolic.m  Phi_21600_0.mat  PropagationDiff_VsGMAT.xlsx  SymbolicPartials.m  Util.cc  Util.h  VehicleState.cc  VehicleState.h  call_createA.m  createA.m  gravJ2_x.m  gravJ2_y.m  gravJ2_z.m  idkk.m  lighttime_truth.mat  main.cc  plotting.m
src/example/: HelloWorld.cpp  MatRunTest.m  MatlabExample.cpp  boost_example.cpp
src/project/: Estimators.cc  Estimators.h  GetCost.m  OptimizeIC.m  Util.cc  Util.h  VehicleState.cc  VehicleState.h  compare_meas.m  main.cc  main_cost.cc  orbital.cc  orbital.h  plotting.m  unit_test.cc
